Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: time-svc
spec:
  type: NodePort
  selector:
    app: timeapp
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30090
