Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: time-ingress
  labels:
    name: time-ingress
spec:
  rules:
  - host: time.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: time-svc
            port: 
              number: 5000
